# WTForm

./: app.py  pyproject.toml
templates/: cadastro.html  fake.html
