[tool.poetry]
name = "wtform"
version = "0.1.0"
description = ""
authors = ["Leandro Gonçalves <leandro.gwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
jinja2 = "^3.1.4"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
